--- a/snake.css
+++ b/snake.css
@@ -26,3 +26,14 @@ h1 {
 .food {
   background-color: black;
 }
+
+.score {
+  margin-left: 950px;
+  text-align: center;
+  padding-top: 10px;
+  height: 30px;
+  width: 120px;
+  background-color: rgb(207, 203, 203);
+  border-radius: 20px;
+  border: 1px solid black;
+}
