Added feature of game over
if the snake will touch itself the game will be over

--- a/snake.css
+++ b/snake.css
@@ -37,3 +37,25 @@ h1 {
   border-radius: 20px;
   border: 1px solid black;
 }
+
+.gameOver {
+  justify-self: start;
+  z-index: 2;
+  position: absolute;
+  top: 0;
+  width: 50vw;
+  height: 50vw;
+  margin-top: -100vw;
+  margin-left: 25vw;
+  background-color: gray;
+  transition: 1s;
+  font-size: 100px;
+}
+
+.status {
+  text-align: center;
+}
+
+element {
+  margin-left: 25vw;
+}
