--- a/snake.css
+++ b/snake.css
@@ -32,11 +32,10 @@ element {
 }
 
 .score {
-  margin-left: 950px;
   text-align: center;
   padding-top: 10px;
   height: 30px;
-  width: 120px;
+  width: 130px;
   background-color: rgb(207, 203, 203);
   border-radius: 20px;
   border: 1px solid black;
@@ -58,4 +57,19 @@ element {
 
 .status {
   text-align: center;
+}
+
+.gameStatus {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.timer {
+  text-align: center;
+  padding-top: 10px;
+  height: 30px;
+  width: 130px;
+  background-color: rgb(207, 203, 203);
+  border-radius: 20px;
+  border: 1px solid black;
 }
