--- a/snake.css
+++ b/snake.css
@@ -21,6 +21,7 @@ element {
 
 .snake {
   background-color: black;
+  border-radius: 50px;
 }
 
 .ghost {
@@ -28,7 +29,7 @@ element {
 }
 
 .food {
-  background-color: black;
+  background-color: red;
 }
 
 .score {
