--- a/snake.css
+++ b/snake.css
@@ -21,15 +21,47 @@ element {
 
 .snake {
   background-color: black;
-  border-radius: 50px;
+  border-radius: 40px;
 }
 
 .ghost {
   background-color: gray;
 }
 
-.food {
+.normal {
+  border-radius: 50px;
   background-color: red;
+  animation-name: normalFood;
+  animation-duration: 0.7s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes normalFood {
+  from {
+    box-shadow: 0px 0px 3px 3px orange;
+  }
+  to {
+    box-shadow: 0px 0px 1px 1px orange;
+  }
+}
+
+.special {
+  border-radius: 50px;
+  background-color: blue;
+  animation-name: specialFood;
+  animation-duration: 0.7s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes specialFood {
+  from {
+    box-shadow: 0px 0px 5px 5px red;
+  }
+  to {
+    box-shadow: 0px 0px 1px 1px red;
+  }
 }
 
 .score {
